--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <!-- tank tips -->
         <div class="container--right">
             <aside class="tankTips">
-                <section class="tip">
+                <!-- <section class="tip">
                     <div class="tip__text">
                         Clean your tank every 14 days.
                     </div>
@@ -65,7 +65,7 @@
                 </section>
                 <section>
                     <div class="tip__text">THIS IS a TIP</div>
-                </section>
+                </section> -->
             </aside>
         </div >    
     </main>
