--- a/index.html
+++ b/index.html
@@ -30,43 +30,12 @@
                 </section>
             </article>
             <!-- location list -->
-            <article class= "locations">
-                <section class="location">
-                    <div><img class="location__image" src="./media/greatBarrierReef.jpg" alt="Michaelmas Cay, Great Barrier Reef, Queensland © Tourism and Events Queensland" ></div>
-                    <div class="location__name">Great Barrier Reef</div>
-                    <div class="location__url"> <a href="https://www.australia.com/en-us/places/cairns-and-surrounds/guide-to-the-great-barrier-reef.html"> Australian Guide to the Great Barrier Reef</a></div>
-                    <div class="location__desc">This is information about the Great Barrier Reef</div>
-                </section>
-                <section class= "locations">
-                    <div><img class="location__image" src="./media/Borneo.jpg" alt="shallow water with vegetation, house on stilts in the middle ground, the island of Borneo in the background"></div>
-                    <div class="location__name">Borneo</div>
-                    <div class="location__url"><a href="http://www.pbs.org/edens/borneo/awesome.html"> PBS article on Boreno</a></div>
-                    <div class="location__desc">This is the third largest island in the world and contains one of the oldest rainforest. </div>
-                </section>
-                <section class= "locations">
-                    <div><img class="location__image" src="./media/" alt=""></div>
-                    <div class="location__name">Mekong River</div>
-                    <div class="location__url"><a href="https://www.britannica.com/place/Mekong-River">Britannica article on Mekong River</a></div>
-                    <div class="location__desc">The world's twelfth longest river at 4,350 km (2,703 mi).</div>
-                </section>
-            </article>
+            <article class= "locationList"></article>
         </div>
 
             <!-- tank tips -->
         <div class="container--right">
-            <aside class="tankTips">
-                <!-- <section class="tip">
-                    <div class="tip__text">
-                        Clean your tank every 14 days.
-                    </div>
-                </section>
-                <section class="tip">
-                    <div class="tip__text"> For freshwater tanks, check the level of salinty weekly</div>
-                </section>
-                <section>
-                    <div class="tip__text">THIS IS a TIP</div>
-                </section> -->
-            </aside>
+            <aside class="tankTips"></aside>
         </div >    
     </main>
     <script type = "module" src="scripts/main.js"></script>
