--- a/index.html
+++ b/index.html
@@ -13,22 +13,13 @@
     </header>
 
     <main class="content"> 
-        <!-- fish List -->
         <div class="container--left">
-
+            <!-- fish List --> 
             <article class= "fishList"> </article>
     
             <!-- quote list -->
-            <article class= "quotes">
-                <section class="quote"> 
-                    <div class="quote__text">
-                        "Many men go fishing all their lives without knowing it is not fish that they are after."
-                    </div>
-                    <div class="quote__author">
-                        Henry David Thoreau 
-                    </div>
-                </section>
-            </article>
+            <article class= "quotes"> </article>
+
             <!-- location list -->
             <article class= "locationList"></article>
         </div>
