--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             <article class= "fishList"> </article>
     
             <!-- quote list -->
-            <article class= "quotes"> </article>
+            <article class= "quotes"> <h2>Fish Quotes</h2> </article>
 
             <!-- location list -->
-            <article class= "locationList"></article>
+            <article class= "locationList">  <h2>Fish Harvest Locations</h2></article>
         </div>
 
             <!-- tank tips -->
         <div class="container--right">
-            <aside class="tankTips"></aside>
+            <aside class="tankTips"> <h2>Tank Care Tips!</h2> </aside>
         </div >    
     </main>
     <script type = "module" src="scripts/main.js"></script>
