update margins and padding

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="content"> 
         <div class="container--left">
             <!-- fish List --> 
-            <article class= "fishList"> </article>
+            <article class= "fishList"><h2>Martin's Fish</h2> </article>
     
             <!-- quote list -->
             <article class= "quotes"> <h2>Fish Quotes</h2> </article>
